sonar code quality fixes various p2c